docs: Add multi file processing and start transformation

--- a/code/3_analysis_of_single_movie.ipynb
+++ b/code/3_analysis_of_single_movie.ipynb
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "# Pfad zu JSON-Datei\n",
-    "PATH_TO_DATA = '/home/schlagoo/OneDrive/mld/semester_1/natural_language_processing/nlp_project_sose20/data/test.json'\n",
+    "PATH_TO_DATA = '../data/raw.json'\n",
     "# Einlesen der JSON-Datei in Dictionary\n",
     "with open(PATH_TO_DATA) as jf:\n",
     "    data = json.load(jf)"
@@ -2123,8 +2123,8 @@
     "words = [token.lemma_ for token in document if not token.is_stop and not token.is_punct]\n",
     "# Worthäufigkeit berechnen\n",
     "frequencies = Counter(words)\n",
-    "# Namen identifizieren\n",
-    "entities = sorted(set(token.text for token in document.ents))   "
+    "# Eigennamen identifizieren\n",
+    "entities = sorted(set(token.text for token in document.ents))"
    ]
   },
   {
@@ -2166,7 +2166,7 @@
    "metadata": {},
    "source": [
     "### Datenvisualisierung\n",
-    "Wir können uns nun beispielsweise die 25 am häufigsten vorkommenden Wörter unserer Zusammenfassung plotten."
+    "Wir können uns nun beispielsweise die 30 am häufigsten vorkommenden Wörter unserer Zusammenfassung plotten."
    ]
   },
   {
@@ -2175,7 +2175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "common = dict(Counter(words).most_common(25))"
+    "common = dict(Counter(words).most_common(30))"
    ]
   },
   {
@@ -2200,7 +2200,7 @@
     "# Plotgröße definieren\n",
     "plt.rcParams[\"figure.figsize\"] = (16, 8)\n",
     "# Bar-Plot basierend auf Dictionary erzeugen und visualisieren\n",
-    "plt.bar(range(len(common)), list(common.values()), tick_label=list(common.keys()))\n",
+    "plt.barh(range(len(common)), list(common.values()), tick_label=list(common.keys()))\n",
     "plt.show()"
    ]
   },
@@ -2343,6 +2343,14 @@
    "metadata": {},
    "source": [
     "Es könnte sich hierbei um eine Geschichte der irischen Mafia handeln, beginnend in den 1950er Jahren. Robert de Niro und Joe Pesci scheinen eine Rolle zu verkörpern. Spielort könnte New York sein."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bag of Words\n",
+    "frequencies hier"
    ]
   },
   {
