Document notebook 0 and 2

--- a/code/0_nlp_intro_schlaak_weise.ipynb
+++ b/code/0_nlp_intro_schlaak_weise.ipynb
@@ -4,18 +4,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Natural Language Processing (SoSe 20)\n",
+    "# Projekt - Natural Language Processing (SoSe 20)\n",
+    "\n",
+    "In diesem Projekt möchten wir uns anhand eines realitätsnahen Anwendungsfalls mit der Analyse natürlicher Sprache beschäftigen. Hierzu haben wir verschiedene Anforderungen an Themen definiert, welche wir in Ihrer Vorlesung kennen gelernt haben und im Folgenden anwenden.\n",
+    "\n",
+    "Generell ermöglichen alle hier hervorgehobenen Hyperlinks eine Navigation zwischen den einzelnen Notebooks. In jedem Notebook finden Sie deswegen jeweils einen Link, welche eine Navigation zum nächsten Notebook, sowie zurück in Übersicht ermöglicht.\n",
     "\n",
     "### Authoren\n",
-    "* Pascal Schlaak (58738)\n",
-    "* Tim Weise (12345)\n",
     "\n",
-    "### Gliederung\n",
+    "* [Pascal Schlaak (58738)](mailto:pascal.schlaak@studmail.htw-aalen.de)\n",
+    "* [Tim Weise (12345)](mailto:tim.weise@studmail.htw-aalen.de)\n",
+    "\n",
+    "Bei weiteren Fragen können Sie uns unter den hier referenzierten E-Mailadressen kontaktieren.\n",
+    "\n",
+    "### Setup\n",
+    "\n",
+    "Zu einem erfolgreichen Ausführen dieser Notebooks empfehlen wir die Nutzung von `Python 3.8.2`. Ebenso sollte eine virtuelle Umgebung erstellt werden, in welcher die in der `requirements.txt` aufgelisteten Module installiert werden sollten. Im folgenden Codeausschnitt wird dargestellt, wie ein solches Setup realisiert werden kann.\n",
+    "\n",
+    "```bash\n",
+    "cd /dieses/projekt/verzeichnis\n",
+    "python3 -m venv \"venv-name\"\n",
+    "source \".venv-name\"/bin/activate\n",
+    "pip install -r ./requirements.txt\n",
+    "```\n",
+    "\n",
+    "##### Ressourcen\n",
+    "\n",
+    "* [Python 3.8.2](https://www.python.org/downloads/release/python-382/)\n",
+    "* Module siehe [requirements.txt](./requirements.txt)\n",
+    "\n",
+    "Achtung: Die Laufzeitdauer mancher Codezellen ist sehr hoch. Sämtliche Outputs wurden deshalb bereits von uns generiert. Wir empfehlen daher lediglich das Durchlesen der Notebooks. \n",
+    "\n",
+    "## Problemstellung\n",
+    "\n",
+    "Unsere Idee beruht auf dem Gedanken der Empfehlung ähnlicher Titel bei der Wiedergabe von Filmen auf Streaming Plattformen. Dienstleister wie beispielsweise [Netflix](https://www.netflix.com/de-en/) nutzen bereits solche Funktionalität in ihrem System (siehe Abbildung), verwenden vermutlich jedoch verschiedenste Ansätze für die Generierung von Vorschlägen.  \n",
+    "\n",
+    "![Netflix - Filmvorschläge](./imgs/netflix.png)\n",
+    "\n",
+    "Welche Datenbasis hierfür verwendet wird ist unklar. Es kommen generell mehrere Quellen in Frage:\n",
+    "\n",
+    "* Bewertungen des Nutzers\n",
+    "* Streaming-Verlauf des Nutzers\n",
+    "* Filme des gleichen Genres\n",
+    "* Inhaltlich ähnliche Filme\n",
+    "* Filmneuheiten\n",
+    "* etc.\n",
+    "\n",
+    "Wir möchten in diesem Projekt lediglich Handlungsinhalte aus Zusammenfassungen der Filmbeschreibung, konkret nur natürlicher Sprache, als Datenbasis für die Empfehlung ähnlicher Filme nutzen und somit untersuchen, wie gut sich lediglich diese Datenbasis für ein Clustering und Empfehlung ähnlicher Titel eignen.\n",
+    "\n",
+    "## Gliederung\n",
+    "\n",
+    "Mithilfe eines Crawlers soll eine Datenbasis verschiedener Filme generiert werden. Im Folgenden soll ein erstes Sichten der Daten erfolgen, um die Korrektheit der Daten sicherstellen zu können. Anschließend werden alle Daten dahingehend vorverarbeitet, dass eine spätere Analyse möglich ist. Zuletzt soll eine Analyse der Filmdaten durchgeführt werden. Hierbei sollen alle Einträge mithilfe eines Clustering-Algorithmus einem Genre zugeordnet werden. Ebenfalls soll eine Ähnlichkeitsanalyse durchgeführt werden, womit eine Empfehlung ähnlicher Titel ermöglicht werden soll.\n",
+    "\n",
+    "Wir empfehlen das Durcharbeiten der folgenden Notebooks in chronologischer Reihenfolge.\n",
     "\n",
     "1. [Datencrawling](./)\n",
-    "2. [Datenvalidierung](./3_analysis_of_single_movie.ipynb)\n",
-    "3. [Verarbeitung aller Dateneinträge](./4_processing_of_all_movies.ipynb)\n",
-    "4. [Clusteranalyse und Vorhersage Empfehlung](./5_data_transformation.ipynb)"
+    "2. [Datenvalidierung](./2_nlp_validation_schlaak_weise.ipynb)\n",
+    "3. [Verarbeitung aller Dateneinträge](./3_nlp_preprocessing_schlaak_weise.ipynb)\n",
+    "4. [Clusteranalyse und Vorhersage Empfehlung](./4_nlp_analysis_schlaak_weise.ipynb)"
    ]
   },
   {
