--- a/code/3_nlp_preprocessing_schlaak_weise.ipynb
+++ b/code/3_nlp_preprocessing_schlaak_weise.ipynb
@@ -4,14 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Verarbeitung mehrerer Daten\n",
+    "Von [Pascal Schlaak](mailto:pascal.schlaak@studmail.htw-aalen.de), [Tim Weise](mailto:tim.weise@studmail.htw-aalen.de) - Natural Language Processing (SoSe 20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Verarbeitung aller Dateneinträge\n",
     "\n",
     "In diesem Notebook soll auf der Analyse eines spezifischen Films aufgebaut werden, indem die Verarbeitung aller gecrawlten Filmdaten untersucht wird. Hierfür bietet es sich an zuerst einen generellen Überblick aller Daten zu verschaffen.\n",
     "\n",
     "## Module importieren\n",
     "\n",
-    "Als erstes werden wieder einmal alle nötigen Module importiert.\n",
-    "* TODO: Packages beschreiben"
+    "Zur Verarbeitung der Datenbasis werden folgende Module benötigt und müssen zuerst importiert werden."
    ]
   },
   {
@@ -20,7 +26,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
     "import spacy\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -33,8 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Einlesen der Daten\n",
-    "Im folgenden können nun alle Daten eingelesen werden. Wir nutzen hierfür die Funktionalität des Moduls `Pandas`, welches sich für die Analyse von Daten eignet. Mithilfe von `pd.read_json()` kann der Inhalt der JSON-Datei in ein Pandas Dataframe überführt werden."
+    "## Daten einlesen"
    ]
   },
   {
@@ -81,14 +85,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Diese Anzahl bietet uns eine solide Datenbasis für kommende Verarbeitungsschritte. Neben der Anzahl an Filmeinträgen ist eine höhere Anzahl von Wörtern pro Zusammenfassung ebenfalls von Vorteil, da man somit mehr Informationen über einen bestimmten Film hat. Im Folgenden wird die gesamte Anzahl an Wörtern pro Zusammenfassung mit der effektiv für die Transformation nutzbaren Anzahl an Wörtern verglichen. Dieser Vergleich bietet uns Einblicke in den Verlust von Wörtern wie beispielsweise Stoppwörtern, welche kein nützliches Wissen für die Analyse des Filminhaltes darstellen."
+    "Diese Anzahl bietet uns eine solide Datenbasis für kommende Verarbeitungsschritte. Neben der Anzahl an Filmeinträgen ist eine höhere Anzahl von Wörtern pro Zusammenfassung ebenfalls von Vorteil, da man somit mehr Informationen über einen bestimmten Film hat. Im Folgenden wird die gesamte Anzahl an Wörtern pro Zusammenfassung mit der effektiv für die Transformation genutzten Anzahl an Wörtern verglichen. Dieser Vergleich bietet uns Einblicke in den Verlust von Wörtern wie beispielsweise Stoppwörtern, welche kein nützliches Wissen für die Analyse des Filminhaltes darstellen."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Entfernen von Einträgen ohne Zusammenfassung"
+    "## Datenbereinigung"
    ]
   },
   {
@@ -647,12 +651,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fazit\n",
+    "## Fazit\n",
     "\n",
-    "Wir konnten mehrere Informationen aus den gecrawlten Filmzusammenfassungen von IMDb ableiten und generell zeigen, dass eine Verarbeitung aller Daten möglich ist. \n",
+    "Eine Analyse der Zusammenfassung des Films: Die Verurteilten mit Python, Pandas, spaCy ermöglicht eine Analyse und Reduzierung der Textdaten auf inhaltlich relevante Information. Im folgenden Kapitel soll nun eine Verarbeitung aller Dateneinträge angewendet werden, sowie eine Analyse genereller Information erfolgen.\n",
     "\n",
-    "Im folgenden Notebook soll untersucht werden, ob eine gute Transformation, basierend auf diesen Daten, möglich ist."
+    "* [Weiter zu: Verarbeitung aller Dateneinträge](./4_processing_of_all_movies.ipynb)\n",
+    "* [Zurück zur Übersicht](./0_nlp_intro_schlaak_weise.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
