Raw documentation of notebooks 3,4

--- a/code/2_nlp_validation_schlaak_weise.ipynb
+++ b/code/2_nlp_validation_schlaak_weise.ipynb
@@ -3181,9 +3181,9 @@
    "source": [
     "## Fazit\n",
     "\n",
-    "Eine Analyse der Zusammenfassung des Films: Die Verurteilten mit Python, Pandas, spaCy ermöglicht eine Analyse und Reduzierung der Textdaten auf inhaltlich relevante Information. Im folgenden Kapitel soll nun eine Verarbeitung aller Dateneinträge angewendet werden, sowie eine Analyse genereller Information erfolgen.\n",
+    "Eine Analyse der Zusammenfassung des Films: Die Verurteilten mit Python, Pandas und spaCy ermöglicht eine Analyse und Reduzierung der Textdaten auf inhaltlich relevante Informationen. Im folgenden Kapitel soll nun eine Verarbeitung aller Dateneinträge angewendet werden, sowie eine Analyse genereller Information erfolgen.\n",
     "\n",
-    "* [Weiter zu: Verarbeitung aller Dateneinträge](./4_processing_of_all_movies.ipynb)\n",
+    "* [Weiter zu: Verarbeitung aller Dateneinträge](./3_nlp_preprocessing_schlaak_weise.ipynb)\n",
     "* [Zurück zur Übersicht](./0_nlp_intro_schlaak_weise.ipynb)"
    ]
   },
