--- a/notebooks/0_nlp_intro_schlaak_weise.ipynb
+++ b/notebooks/0_nlp_intro_schlaak_weise.ipynb
@@ -6,14 +6,14 @@
    "source": [
     "# Projekt - Natural Language Processing (SoSe 20)\n",
     "\n",
-    "In diesem Projekt möchten wir uns anhand eines realitätsnahen Anwendungsfalls mit der Analyse natürlicher Sprache beschäftigen. Hierzu haben wir verschiedene Anforderungen an Themen definiert, welche wir in Ihrer Vorlesung kennen gelernt haben und im Folgenden anwenden.\n",
+    "In diesem Projekt möchten wir uns, anhand eines realitätsnahen Anwendungsfalls, mit der Analyse natürlicher Sprache beschäftigen. Hierzu haben wir verschiedene Anforderungen an Themen definiert, welche wir in Ihrer Vorlesung kennen gelernt haben und im Folgenden anwenden.\n",
     "\n",
-    "Generell ermöglichen alle hier hervorgehobenen Hyperlinks eine Navigation zwischen den einzelnen Notebooks. In jedem Notebook finden Sie deswegen jeweils einen Link, welche eine Navigation zum nächsten Notebook, sowie zurück in Übersicht ermöglicht.\n",
+    "Generell ermöglichen alle hier hervorgehobenen Hyperlinks eine Navigation zwischen den einzelnen Notebooks. Am Ende jedes Notebooks finden Sie jeweils einen Link, welche eine Navigation zum nächsten Notebook, sowie zurück zur Übersicht ermöglicht.\n",
     "\n",
     "### Authoren\n",
     "\n",
     "* [Pascal Schlaak (58738)](mailto:pascal.schlaak@studmail.htw-aalen.de)\n",
-    "* [Tim Weise (12345)](mailto:tim.weise@studmail.htw-aalen.de)\n",
+    "* [Tim Weise (58716)](mailto:tim.weise@studmail.htw-aalen.de)\n",
     "\n",
     "Bei weiteren Fragen können Sie uns unter den hier referenzierten E-Mailadressen kontaktieren.\n",
     "\n",
@@ -33,7 +33,7 @@
     "* [Python 3.8.2](https://www.python.org/downloads/release/python-382/)\n",
     "* Module siehe [requirements.txt](./requirements.txt)\n",
     "\n",
-    "Achtung: Die Laufzeitdauer mancher Codezellen ist sehr hoch. Sämtliche Outputs wurden deshalb bereits von uns generiert. Wir empfehlen daher lediglich das Durchlesen der Notebooks. \n",
+    "Achtung: Die Laufzeitdauer mancher Codezellen ist sehr hoch. Sämtliche Outputs wurden deshalb bereits von uns generiert. Wir empfehlen daher lediglich das Durchlesen der Notebooks. Gerade bei der Anwendung des Clustering-Algorithmus kann es ebenfalls zu Abweichungen oder einer anderen Reihenfolge der Cluster kommen.\n",
     "\n",
     "## Problemstellung\n",
     "\n",
@@ -50,11 +50,11 @@
     "* Filmneuheiten\n",
     "* etc.\n",
     "\n",
-    "Wir möchten in diesem Projekt lediglich Handlungsinhalte aus Zusammenfassungen der Filmbeschreibung, konkret nur natürlicher Sprache, als Datenbasis für die Empfehlung ähnlicher Filme nutzen und somit untersuchen, wie gut sich lediglich diese Datenbasis für ein Clustering und Empfehlung ähnlicher Titel eignen.\n",
+    "Wir möchten in diesem Projekt lediglich Handlungsinhalte aus Zusammenfassungen der Filmbeschreibung, konkret nur natürlicher Sprache in Textform, als Datenbasis für die Empfehlung ähnlicher Filme nutzen und somit untersuchen, wie gut sich lediglich diese Datenbasis für ein Clustering und Empfehlung ähnlicher Titel eignen.\n",
     "\n",
     "## Gliederung\n",
     "\n",
-    "Mithilfe eines Crawlers soll eine Datenbasis verschiedener Filme generiert werden. Im Folgenden soll ein erstes Sichten der Daten erfolgen, um die Korrektheit der Daten sicherstellen zu können. Anschließend werden alle Daten dahingehend vorverarbeitet, dass eine spätere Analyse möglich ist. Zuletzt soll eine Analyse der Filmdaten durchgeführt werden. Hierbei sollen alle Einträge mithilfe eines Clustering-Algorithmus einem Genre zugeordnet werden. Ebenfalls soll eine Ähnlichkeitsanalyse durchgeführt werden, womit eine Empfehlung ähnlicher Titel ermöglicht werden soll.\n",
+    "Mithilfe eines Crawlers soll eine Datenbasis verschiedener Filme generiert werden. Im Folgenden soll ein erstes Sichten der Daten erfolgen, um die Korrektheit der Daten sicherstellen zu können. Anschließend werden alle Daten dahingehend vorverarbeitet, dass eine spätere Analyse möglich ist. Zuletzt soll eine Analyse der Filmdaten durchgeführt werden. Hierbei sollen alle Einträge mithilfe eines k-Means-Clustering-Algorithmus einem Genre zugeordnet werden. Ebenfalls soll eine Ähnlichkeitsanalyse durchgeführt werden, womit eine Empfehlung ähnlicher Titel ermöglicht werden soll.\n",
     "\n",
     "Wir empfehlen das Durcharbeiten der folgenden Notebooks in chronologischer Reihenfolge.\n",
     "\n",
