--- a/notebooks/4_nlp_analysis_schlaak_weise.ipynb
+++ b/notebooks/4_nlp_analysis_schlaak_weise.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Transformation der Daten\n",
     "\n",
-    "In diesem Notebook möchten wir eine Cluster Analyse unserer zuvor vor verarbeiteten Daten durchführen, um inhaltlich ähnliche Filme zu einem Genre zu ordnen zu können. basierend darauf soll eine Ähnlichkeitsanalyse innerhalb jedes Clusters durchgeführt werden, um Vorschläge für ähnliche Titel aussprechen zu können.\n",
+    "In diesem Notebook möchten wir eine Clusteranalyse unserer zuvor vorverarbeiteten Daten durchführen, um inhaltlich ähnliche Filme zu einem Genre zuzuordnen. Basierend darauf soll eine Ähnlichkeitsanalyse innerhalb jedes Clusters durchgeführt werden, um Vorschläge für ähnliche Titel aussprechen zu können.\n",
     "\n",
     "## Module importieren\n",
     "\n",
@@ -92,7 +92,7 @@
    "source": [
     "## Vorverarbeitung der Daten\n",
     "\n",
-    "Lemmatisierung der Token, sowie entfernen von Stoppwörtern, Eigennamen und Verben."
+    "Lemmatisierung der Token, sowie entfernen von Stoppwörtern, Eigennamen und Verben. Speichern der Bow als DataFrame."
    ]
   },
   {
@@ -198,10 +198,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature-Matrix erstellen\n",
+    "## Feature-Matrix\n",
     "\n",
-    "\n",
-    "Damit wir unsere vorverarbeitenden Bag of Words als Eingabe für unsere Cluster Algorithmus verwenden können erstellen wir eine so genannte Feature Matrix. Dabei generieren wir eine Matrix der Häufigkeit aller Token unsere Dateneinträge mithilfe des von `sklearn`s `CountVectorizer` gefolgt von einer Normalisierung mittels `TfidfTransformer` der Daten. Wir nutzen hierbei die Inverse Dokument Frequency (inverse Dokumentenhäufigkeit). Die inverse Dokumenthäufigkeit misst die Spezifität eines Terms für die Gesamtmenge der betrachteten Dokumente. Ein übereinstimmendes Vorkommen von seltenen Begriffen ist für die Relevanz aussagekräftiger als eine Übereinstimmung bei sehr häufigen Wörtern [[Quelle]](https://de.wikipedia.org/wiki/Tf-idf-Ma%C3%9F)."
+    "Damit wir unsere vorverarbeitenden BoWs als Eingabe für unseren k-Means-Clusteralgorithmus verwenden können, erstellen wir eine so genannte Feature-Matrix. Dabei generieren wir eine Matrix der Häufigkeit aller Wörter unsere Dateneinträge mithilfe des `CountVectorizer` gefolgt von einer Normalisierung mittels `TfidfTransformer`. Wir nutzen hierbei die Inverse Dokument Frequency (inverse Dokumentenhäufigkeit). Die inverse Dokumenthäufigkeit misst die Spezifität eines Terms für die Gesamtmenge der betrachteten Dokumente. Ein übereinstimmendes Vorkommen von seltenen Begriffen ist für die Relevanz aussagekräftiger als eine Übereinstimmung bei sehr häufigen Wörtern [[Quelle]](https://de.wikipedia.org/wiki/Tf-idf-Ma%C3%9F)."
    ]
   },
   {
@@ -220,7 +219,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unsere Feature Matrix besteht somit aus 237 Einträgen, die jeweils über 196 Wörter/Token verfügen. Jeder Dateneintrag besitzt selbstverständlich nicht jedes Wort und hat deshalb bei mehreren Token eine Frequenz von 0."
+    "Wir verwenden weitere Parameter bei der Vektorisierung und Normalisierung der Daten. Diese haben sich besonders während der Analyse des Clustering-Algorithmus bewährt. \n",
+    "\n",
+    "* max_df: Ignoriert Token mit Frequenz > Wert\n",
+    "* min_df: Ignoriert Token mit Frequenz < Wert\n",
+    "* ngram_range: Definiert n-Gramme der spezifizierten Größen, die benutzt werden\n",
+    "\n",
+    "Unsere Feature Matrix besteht somit aus 237 Einträgen, die jeweils über 196 Wörter/Token verfügen. Jeder Dateneintrag besitzt selbstverständlich nicht jedes Wort und hat deshalb bei unbenutzten Token eine Frequenz von 0."
    ]
   },
   {
@@ -286,7 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wir erhalten somit 196 Wörter, welche das für dieses Projekt benötigte Vokabular darstellen. Bei einer Optimierung dieses Projekts könnte man beispielsweise dieses Vokabular  (erweitert mit Stoppwörtern, Satzzeichen) anstatt eines der von spaCy zur Verügung gestellten Sprachmodelle nutzen."
+    "Wir erhalten somit 196 Wörter, welche das für dieses Projekt benötigte Vokabular darstellen. Bei einer Optimierung dieses Projekts könnte man beispielsweise dieses Vokabular  (erweitert mit Stoppwörtern, Satzzeichen) in einem der von spaCy zur Verügung gestellten Sprachmodelle nutzen."
    ]
   },
   {
@@ -532,7 +537,7 @@
    "source": [
     "## k-Means-Clustering\n",
     "\n",
-    "Nachdem wir nun einen validen Input generiert haben, können wir mit dem mit der Modellierung unseres Clustering Algorithmus fortfahren. Wir nutzen hier für den so genannten `k-Means`-Algorithmus, der aus einer Menge von ähnlichen Objekten eine zuvor definierte Anzahl an Clustern bildet. Hierfür nutzen wir ebenfalls `sklearn`. \n",
+    "Nachdem wir nun valide Inputs generiert haben, können wir mit der Modellierung unseres Clustering Algorithmus fortfahren. Wir nutzen hierfür den so genannten `k-Means`-Algorithmus, der aus einer Menge von ähnlichen Objekten eine zuvor definierte Anzahl an Clustern bildet. Hierfür nutzen wir ebenfalls `sklearn`. \n",
     "\n",
     "Ein gängier Ansatz bei der Evaluierung von Clustering-Algorithmen ist es, den Algorithmus in einer Schleife bis zu einem bestimmten Schwellwert an Clustern auszuführen. Man nutzt dabei eine Metrik, um die Performanz des Algorithmus zu messen. sklearns `inertia` bietet eine Schnittstelle zur Berechnung der `within-cluster sum-of-squares (WSS)` zur Berechnung der Summe der quadrierten Abweichungen von den Cluster-Schwerpunkten. Valide Werte für die Anzahl an Clustern bei unseren Daten sind: 1, ..., 237. 237 Cluster sind dennoch nicht sinnvoll, da wir so jeden Dateneintrag einem eigenen Cluster zuordnen würden. Wir definieren unsere maximale Anzahl an Clustern, welche für uns die verschiedenen Genres der Filmhandlungen darstellen sollen, als 10."
    ]
@@ -555,7 +560,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Um eine Aussage zum Wählen einer bestimmten Anzahl an Clustern treffen zu können plotten wir mithilfe von Matplotlib alle WSS. Wir wählen dabei eine Zahl, welche einen \"Knick\" / niedrigere Steigung aufweist."
+    "Um eine Aussage zum Wählen einer bestimmten Anzahl an Clustern treffen zu können plotten wir mithilfe von Matplotlib alle WSS. Wir wählen dabei eine Clusteranzahl, welche einen \"Knick\" / niedrigere Steigung aufweist."
    ]
   },
   {
@@ -782,7 +787,7 @@
     "## Clustermerkmale\n",
     "\n",
     "\n",
-    "Man kann nun die Eigenschaften eines Clusters untersuchen, in dem man sich die relevantesten Token der einzelnen Cluster anschaut. Dafür iteriert man über jedes einzelne Cluster und gibt eine bestimmte Anzahl an relevantesten Tokens, welche am nächsten zum Mittelpunkt des Clusters sind, aus. Wir können ebenfalls für jedes Cluster ein paar Filme ausgeben, um das Cluster genauer beschreiben zu können."
+    "Man kann nun die Eigenschaften eines Clusters untersuchen, in dem man sich die relevantesten Token der einzelnen Cluster anschaut. Dafür iteriert man über jedes einzelne Cluster und gibt eine bestimmte Anzahl an relevantesten Tokens, welche am nächsten zum Mittelpunkt des Clusters sind, aus. Wir können ebenfalls für jedes Cluster mehrere Filme ausgeben, um das Cluster genauer beschreiben zu können."
    ]
   },
   {
@@ -831,9 +836,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Clusterzuordnungen\n",
-    "\n",
-    "Wir können dann versuchen jedes Cluster durch ein Genre zu beschreiben."
+    "## Clusterzuordnungen"
    ]
   },
   {
@@ -879,6 +882,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Wir können dann versuchen jedes Cluster durch ein Genre zu beschreiben:\n",
+    "\n",
     "* Cluster 0: Drama, Romance\n",
     "* Cluster 1: Drama, Emotional\n",
     "* Cluster 2: Drama, Misterös, Krimi\n",
@@ -887,18 +892,15 @@
     "* Cluster 5: Action, Krimi\n",
     "* Cluster 6: Action, Abenteuer, Scifi, Krieg\n",
     "\n",
-    "Was ebenfalls für die Clusteraufteilung spricht ist der Fakt, dass Sequels mit ähnlicher Story dem gleichen Cluster zugeordnet wurden, siehe beispielsweise: Der Herr der Ringe, der Pate. Trotzdem gibt es ein paar Filme die sich inhaltlich von anderen innerhalb des gleichen Clusters unterschieden, wie beispielsweise Pulp Fiction und Toy Story."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Was ebenfalls für die Clusteraufteilung spricht ist der Fakt, dass Sequels mit ähnlicher Handlung, dem gleichen Cluster zugeordnet wurden (siehe beispielsweise: Der Herr der Ringe, der Pate). Trotzdem gibt es ein paar Filme die sich zumindest subjektiv innerhalb des gleichen Clusters unterscheiden, beispielsweise Pulp Fiction und Toy Story. Man könnte hierfür eine genauere Analyse der zwei Filme durchführen, um zu entscheiden, ob deren Handlungen wirklich ähnlich sind.\n",
+    "\n",
+    "Die Aufteilung der Filme ist dennoch sehr zufriedenstellend, was unsere Vorverarbeitung der Daten bestätigt.\n",
+    "\n",
     "## Ähnlichkeitsanalyse der Filme eines Clusters\n",
     "\n",
-    "Nachdem wir nun Filme einem bestimmten Schorre zugeordnet haben, können wir die Ähnlichkeiten verschiedene Filme berechnen. Am sinnvollsten ist es Filme des gleichen Clusters zu vergleichen, da diese sich inhaltlich am ähnlichsten sind.\n",
+    "Basierend auf dieser Aufteilung aller Filme zu Clustern/Genres, kann nun eine Ähnlichkeitsanalyse durchgefürt werden. Es bietet sich an nur Filme innerhalb eines Genres zu vergleichen, da diese sich inhaltlich am ähnlichsten sind.\n",
     "\n",
-    "spaCy bietet hierfür eine Methode namens `similarity()`, die die Kosinus Ähnlichkeit zwischen zwei Vektoren (z.B. Token oder Dokumenten) berechnet. spaCy setzt hierfür voraus, dass man ein Sprachmodell verwendet, welches über Wort Vektoren verfügt. Wir importieren deswegen zuerst ein umfangreicheres Sprachmodell."
+    "spaCy bietet hierfür eine Methode namens `similarity()`, die die Kosinus Ähnlichkeit zwischen zwei Vektoren (z.B. Token oder Dokumenten) berechnet. spaCy setzt hierfür voraus, dass man ein Sprachmodell verwendet, welches über Wort Vektoren verfügt. Wir importieren dafür zuerst ein umfangreicheres Sprachmodell."
    ]
   },
   {
@@ -915,7 +917,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Der folgende Algorithmus berechnet somit für jeden Film in jedem Cluster mit jedem weiteren Film des Clusters dessen Kosinus Ähnlichkeit und speichert diese gerundet in einer Confusion Matrix. Man erhält folgende Tabelle, wobei jede Reihe einen Film darstellt und jede Spalte dessen Änlichkeit zu einem weiteren Film."
+    "Der folgende Algorithmus berechnet somit für jeden Film, in jedem Cluster, mit jedem weiteren Film des Clusters, dessen Kosinus-Ähnlichkeit und speichert diese gerundet in einer Confusion-Matrix. Man erhält folgende Tabelle, wobei jede Reihe einen Film darstellt und jede Spalte dessen Änlichkeit zu einem weiteren Film.\n",
+    "\n",
+    "Achtung: Die Berechnung der Confusion-Matrix dauert sehr lange."
    ]
   },
   {
@@ -1351,7 +1355,9 @@
    "source": [
     "## Min-Max-Normalisierung\n",
     "\n",
-    "Wie man zuvor erkennen konnte, sind die Ähnlichkeiten aller Filme eines Clusters relativ hoch. Dies liegt an der doch größeren Anzahl an selben Wörtern in jeder Zusammenfassung. Es bietet sich daher an alle Ergebnisse zu normalisieren, um ein breiteres Spektrum an Ähnlichkeiten zu erhalten. Die sogenannte Min-Max-Normalisierung bietet sich dafür an. Es wird der minimale- und maximale Wert der Confusion Matrix benötigt:"
+    "Wie man zuvor erkennen konnte, sind die Ähnlichkeiten aller Filme eines Clusters relativ hoch. Dies liegt an der doch größeren Anzahl an gleichen Wörtern (vor allem in deren Grundform) in jeder Zusammenfassung. Es ist deshalb sinnvoll alle Ergebnisse zu normalisieren, um ein breiteres Spektrum an Ähnlichkeiten zu erhalten. Die sogenannte Min-Max-Normalisierung bietet sich hierfür an. \n",
+    "\n",
+    "Es wird der minimale- und maximale Wert der Confusion Matrix benötigt:"
    ]
   },
   {
@@ -1400,7 +1406,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Es wird vorrübergehend die Spalte der Titel entfernt, damit alle Werte Zahlen entsprechen und normalisiert werden können."
+    "Es wird vorrübergehend die Spalte der Titel entfernt, damit alle Werte einer Zahl entsprechen und dementsprechend normalisiert werden können."
    ]
   },
   {
@@ -1417,7 +1423,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Anhand der folgenden Formel können unsere Daten normalisiert werden."
+    "Anhand der folgenden Formel können unsere Daten normalisiert werden:"
    ]
   },
   {
@@ -1433,7 +1439,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wir konkatinieren wiederrum unsere Titel-Spalte mit den nun normalisieren Ähnlichkeiten."
+    "Wir konkatinieren wiederrum unsere Titel-Spalte mit den nun normalisieren Ähnlichkeitswerten."
    ]
   },
   {
@@ -1860,9 +1866,9 @@
    "source": [
     "## Beispiel: Filmempfehlung\n",
     "\n",
-    "Ein letztes Beispiel soll nun unseren anfänglich definierten Anwendungsfall darstellen. Wir gehen davon aus, dass ein Nutzer den Film Inception angesehen hat, begeistert war und nun einen möglichst ähnlichen Titel schauen möchte. \n",
+    "Ein letztes Beispiel soll nun unseren anfänglich definierten Anwendungsfall darstellen. Wir gehen davon aus, dass ein Nutzer den Film *Inception* angesehen hat, begeistert war und nun einen möglichst ähnlichen Titel wiedergeben möchte. \n",
     "\n",
-    "Wir identifizieren hierfür den Film Inception in unserer Datenstruktur (in einer realen Anwendung beispielsweise eine Datenbank). Wir transponieren nun unseren Datensatz bestehend aus einem Film und dessen Ähnlichkeiten zu weiteren Filmen aus dem gleichen Cluster, um einen Spaltenvektor zu erlangen. Schlussendlich sortieren wir unsere Liste der Ähnlichkeiten in absteigender Reihenfolge (\"Order By\"-Statement Datenbank)."
+    "Wir identifizieren hierfür den Film *Inception* in unserer Datenstruktur (in einer realen Anwendung beispielsweise eine in einer Datenbank). Wir transponieren nun unseren Datensatz bestehend aus einem Film und dessen Ähnlichkeiten zu weiteren Filmen aus dem gleichen Cluster, um einen Spaltenvektor zu erlangen. Schlussendlich sortieren wir unsere Liste der Ähnlichkeiten in absteigender Reihenfolge (\"Order By\"-Statement in Datenbank)."
    ]
   },
   {
@@ -1980,6 +1986,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Werte absteigend sortieren."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {},
@@ -2088,7 +2101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wir sind nun in der Lage Vorschläge an inhaltlich ähnlichen Titel auszusprechen. Wir können hierfür eine Reihe von Filmen (siehe Netflix-Beispiel Übersicht) visualisieren oder einen einzelnen Film ausgeben. Man muss beachten, dass man hierbei den gleichen Titel nicht vorschlägt. In einem realen Anwendungsfall könnte man ebenfalls alle Titel, welche der Nutzer bereits gesehen hat, exkludieren. Beispielsweise könnte man dem Nutzer als nächstes den Film: Die Truman Show empfehlen. Dieser passt inhaltlich zu Inception, da es sich in beiden Filmen teilweise um eine Simulation dreht. "
+    "Wir sind nun in der Lage Vorschläge der inhaltlich ähnlichen Titel auszusprechen. Wir können hierfür eine Reihe von Filmen (siehe Netflix-Beispiel in Übersicht) visualisieren oder einen einzelnen Film ausgeben. Man muss beachten, dass man hierbei den gleichen Titel vernachlässigt. In einem realen Anwendungsfall könnte man ebenfalls alle Titel, welche der Nutzer bereits gesehen hat, exkludieren. Beispielsweise könnte man dem Nutzer als nächstes den Film: Die Truman Show empfehlen, insofern er diesen noch nicht gesehen hat. Dieser passt inhaltlich zu Inception, da es sich in beiden Filmen teilweise um eine Simulation dreht."
    ]
   },
   {
@@ -2097,7 +2110,7 @@
    "source": [
     "## Fazit\n",
     "\n",
-    "Mithilfe einer durch einen Crawler erstellten Datenbasis, geeigneten Vorverarbeitung der Daten und k-Means Clustering Algorithmus konnten wir unsere Daten bestehend aus Film Zusammenfassungen inhaltlich Clustern. Mithilfe der Kosinus Ähnlichkeit konnten wir alle Filme in einem Cluster vergleichen um letztendlich einen Teil eines realen Anwendungsfalls von Natural Language Processing und Maschinen Learning in Streaming-Anwendungen abzubilden.\n",
+    "Mithilfe einer durch einen Crawler erstellten Datenbasis, geeigneten Vorverarbeitung der Daten und k-Means-Clustering-Algorithmus konnten wir unsere Daten bestehend aus Filmzusammenfassungen inhaltlich Clustern. Durch die Kosinus-Ähnlichkeit konnten wir alle Filme in einem Cluster vergleichen, um letztendlich einen Teil eines realen Anwendungsfalls von Natural Language Processing und Maschinen Learning in Streaming-Anwendungen abzubilden.\n",
     "\n",
     "* [Zurück zur Übersicht](./0_nlp_intro_schlaak_weise.ipynb)"
    ]
