Add zipfsches gesetz to notebook 2

--- a/notebooks/2_nlp_validation_schlaak_weise.ipynb
+++ b/notebooks/2_nlp_validation_schlaak_weise.ipynb
@@ -676,7 +676,7 @@
    "source": [
     "## Bag of Words und Worthäufigkeit\n",
     "\n",
-    "Zur Identifizierung inhaltlich wichtiger Informationen nutzen wir den Ansatz der *Bag of Words (BoW)*. Dabei versuchen wir mithilfe der Worthäufigkeit, die Relevanz einzelner Token zu messen und diese in einer neuen kompakten Struktur, bestehend aus einer Sammlung aller Wörter der Zusammenfassung, für die spätere Analyse zu sichern. Generell relevantere Token sollten uns wichtige Informationen über den Inhalt des Films liefern. Man muss jedoch beachten, dass es bestimmte Token gibt, die uns keine relevanten Informationen liefern. Dazu später mehr.\n",
+    "Zur Identifizierung inhaltlich wichtiger Informationen nutzen wir den Ansatz der *Bag of Words (BoW)*. Dabei versuchen wir mithilfe der Worthäufigkeit, die Relevanz einzelner Token zu messen und diese in einer neuen kompakten Struktur, bestehend aus einer Sammlung aller Wörter der Zusammenfassung, für die spätere Analyse zu sichern (siehe Zipfsches Gesetz). Generell relevantere Token sollten uns wichtige Informationen über den Inhalt des Films liefern. Man muss jedoch beachten, dass es bestimmte Token gibt, die uns keine relevanten Informationen liefern. Dazu später mehr.\n",
     "\n",
     "Wir erstellen zuerst ein eine neue Liste, welche alle Token der Zusammenfassung beinhaltet. Das Modul `Counter` bietet eine Schnittstelle zum Zählen der Häufigkeit aller Token."
    ]
